[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/ui/bars/enemy_health_bar.gd" type="Script" id=1]
[ext_resource path="res://scenes/ui/bars/resource_bar.tscn" type="PackedScene" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.847059, 0.0627451, 0.0627451, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="EnemyHealthBar" type="Node2D"]
script = ExtResource( 1 )

[node name="HealthBar" parent="." instance=ExtResource( 2 )]
margin_left = -30.0
margin_top = -70.0
margin_right = 30.0
margin_bottom = -60.0
custom_styles/fg = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, 49 )
rect = Rect2( -24, 0, 48, 1 )

[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="on_visible"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="on_not_visible"]
